--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <modules>
         <module>discovery</module><!--<module>8761</module>--> 
         <module>gateway</module><!--<module>8080</module>--> 
+		<module>web-rtc</module><!--<module>8080</module>--> 
     </modules>
 
     <dependencies>  <!-- only dependencies for all services, but bear in mind that an update might mean that all depending services also have to be updated -->
