Signed-off-by: trippledave <trippledave@users.noreply.github.com>

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
         <module>discovery</module><!--<module>8761</module>--> 
         <module>gateway</module><!--<module>8080</module>--> 
 		<module>web-rtc</module><!--<module>8080</module>--> 
+		
+		<module>common-session</module><!--<module>8080</module>--> 
+		<module>common-util</module><!--<module>8080</module>--> 
+		
     </modules>
 
     <dependencies>  <!-- only dependencies for all services, but bear in mind that an update might mean that all depending services also have to be updated -->
