Signed-off-by: trippledave <trippledave@users.noreply.github.com>

--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,9 @@
     <modules>
         <module>discovery</module><!--<module>8761</module>--> 
         <module>gateway</module><!--<module>8080</module>--> 
-		<module>web-rtc</module><!--<module>8080</module>--> 
+		<module>web-rtc</module>
 		
-		<module>common-session</module><!--<module>8080</module>--> 
-		<module>common-util</module><!--<module>8080</module>--> 
+		<module>common-session</module>
 		
     </modules>
 
